--- a/bmi/app/src/main/AndroidManifest.xml
+++ b/bmi/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserAreaActivity"></activity>
+        <activity android:name=".CountActivity"></activity>
+        <activity android:name=".UserAreaActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
