--- a/bmi/app/src/main/AndroidManifest.xml
+++ b/bmi/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CountActivity"></activity>
+        <activity android:name=".BmiData"></activity>
+        <activity android:name=".CountActivity" />
         <activity android:name=".UserAreaActivity" />
         <activity android:name=".RegisterActivity" />
+        <activity android:name=".SQLite" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
