--- a/bmi/build.gradle
+++ b/bmi/build.gradle
@@ -3,12 +3,21 @@
 buildscript {
     repositories {
         google()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
         jcenter()
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.2'
+        // Add the Google Services plugin (check for v3.1.2 or higher).
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.android.tools.build:gradle:2.1.+'
+        // Add the Fabric Crashlytics plugin.
+        classpath 'io.fabric.tools:gradle:1.31.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,10 +28,15 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven{url"https://jitpack.io"}
+        maven{
+            url"https://jitpack.io"
+
+
+        }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
